bug: tinymce text editor was too wide so added styles box for better control of width

--- a/src/css/tinymce.css
+++ b/src/css/tinymce.css
@@ -57,3 +57,13 @@
 .tinymceSubmitButton:focus {
   background-color: #4A524A;
 }
+
+.editor-wrapper {
+  max-width: 60vw;
+  min-width: 250px;
+  width: 70vw;
+  height: fit-content;
+
+  background-color: black;
+  padding: 20px;
+}
